manifests/nginx-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: filebrowser-gateway
  namespace: filebrowser
spec:
  gatewayClassName: nginx
  listeners:
    - name: files-http
      protocol: HTTP
      port: 80
      hostname: files.home.nipo
      allowedRoutes:
        namespaces:
          from: Same
    - name: files-https
      protocol: HTTPS
      port: 443
      hostname: files.home.nipo
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: filebrowser-tls
      allowedRoutes:
        namespaces:
          from: Same

    - name: home-http
      protocol: HTTP
      port: 80
      hostname: home.home.nipo
      allowedRoutes:
        namespaces:
          from: All
    - name: home-https
      protocol: HTTPS
      port: 443
      hostname: home.home.nipo
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: homepage-tls
      allowedRoutes:
        namespaces:
          from: All

    - name: keycloak-http
      protocol: HTTP
      port: 80
      hostname: keycloak.home.nipo
      allowedRoutes:
        namespaces:
          from: All
    
    - name: keycloak-https
      protocol: HTTPS
      port: 443
      hostname: keycloak.home.nipo
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: keycloak-tls
      allowedRoutes:
        namespaces:
          from: All
